syntax = "proto3";
package rrpc.test.v1;

option go_package = "reverse_rpc_pb/test/pb";

import "google/protobuf/descriptor.proto";

message TestRequestBody {
	uint64 id = 1;
	string str = 2;
}

message TestResponseBody {
	uint64 id = 1;
	string str = 2;
}
